Changes Colors in CSS for Hover Effects

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,7 +64,7 @@ a {
 }
 
 .nav-a:hover {
-  color: white;
+  color: #fffaf3;
 }
 
 h1 {
@@ -82,7 +82,7 @@ a {
 }
 
 #a-tops:hover {
-  color: white;
+  color: #fffaf3;
 }
 
 .div-container {
